# Manitou

./: Cargo.toml  README.md
docs/: implementationV1.md  implementationV2.md  implementation_Details.md
src/: client.rs  compat.rs  constant.rs  constants.rs  lib.rs  main.rs  shell.rs
src/constant/: attribute_set.rs
